# Fine_Tuning_Vision_Transformers_on_Cifar100

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: conf.py
docs/reference/: reference.md
notebooks/: finetuning_conv_next_cifar100.ipynb  finetuning_effiecentnet_cifar100.ipynb  finetuning_swin_t_cifar100.ipynb  finetuning_vit_cifar100.ipynb
src/fine_tuning_vision_transformers_cifar100/: __init__.py
